--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,29 @@ body {
 }
 
 
+.item {
+    position: relative;
+}
+
+.item h3,
+.item h5 {
+    position: absolute;
+    bottom: 55px;
+    right: 0;
+    margin: 0;
+    color: white;
+    text-align: right;
+    padding: 5px; /* Aggiunge uno spazio tra il testo e il bordo */
+    background-color: rgba(0, 0, 0, 0.7); /* Aggiunge uno sfondo semitrasparente */
+    font-size: 12px; /* Puoi regolare la dimensione del testo a tuo piacimento */
+}
+
+.item h3{
+    bottom: 95px;
+    font-size: 20px;
+}
+
+
 
 
 
